--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,6 +36,12 @@
         "no-underscore-dangle": "off",
         "comma-dangle": "off",
         "operator-linebreak": "off",
-        "arrow-body-style": "off"
+        "arrow-body-style": "off",
+        "react/jsx-indent": "off",
+        "react/jsx-indent-props": "off",
+        "react/jsx-filename-extension": "off",
+        "react/jsx-one-expression-per-line": "off",
+        "object-curly-newline": "off",
+        "react/jsx-wrap-multilines": "off"
     }
 }
