--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -42,6 +42,8 @@
         "react/jsx-filename-extension": "off",
         "react/jsx-one-expression-per-line": "off",
         "object-curly-newline": "off",
-        "react/jsx-wrap-multilines": "off"
+        "react/jsx-wrap-multilines": "off",
+        "react/prop-types": "off",
+        "no-nested-ternary": "off"
     }
 }
