--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -21,6 +21,8 @@ jobs:
       run: npm install
     - name: Test Lint
       run: npm run lint
+    - name: Unit Test
+      run: npm test -- --watchAll=false
     - name: Build Project
       run: npm run build --if-present
     - name: Deploy to Netlify
